# netket_foundation

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: CI.yml  formatting_check.yml  publish.yml  release.yml
docs/: Makefile  conf.py  getting_started.md  index.md
docs/_templates/autosummary/: class.rst
docs/api/: index.md  operators.md
docs/tutorials/: 1. FNQS training basics.ipynb  2. FNQS with disorder.ipynb  3. Importance Sampling.ipynb  4. Managing data with FNQS.ipynb  5. Hubbard model with FNQS.ipynb  Managing_Data_FNQS_tutorial.ipynb  fnqs_disorder_main_tutorial.ipynb  importance_sampling_tutorial.ipynb  index.md  sampling_tools_tutorial.ipynb
examples/: hubbard_model.py  is_sweep.py  ising1d.py  ising1d_uniform.py  susceptibility.py  susceptibility_to_precision.py
netket_foundation/: __init__.py  distributed.py  expectation_value.py  model.py  monkeypatch.py  operator.py  stats.py
netket_foundation/_src/: distributed.py
netket_foundation/_src/driver/ngd/: driver_vmc_ngd.py  sr_srt_common.py  srt_onthefly.py
netket_foundation/_src/expectation_value/: importance_sampling.py  is_state.py
netket_foundation/_src/hilbert/: parameter_space.py
netket_foundation/_src/model/: attentions.py  vit.py
netket_foundation/_src/model/fermionic_model/: ED_calculation.py  activation.py  fermi_backflow.py  fermi_jastrow.py  fermionic_vit.py  prod_module.py
netket_foundation/_src/model/fermionic_model/fermi_vit/: __init__.py  body.py  embed.py  fmhal1d.py  fmhal2d.py  output.py
netket_foundation/_src/monkeypatch/: __init__.py  abstract_variational_driver.py  fermiop.py  mcstate_sampling.py  mcstate_serialization.py
netket_foundation/_src/nn/: instance_wrapper.py
netket_foundation/_src/operator/: parametrized.py
netket_foundation/_src/operator/embed/: __init__.py  base.py  discrete_jax_operator.py  discrete_operator.py  operator.py
netket_foundation/_src/operator/fermion2nd/: __init__.py  base.py  fermion.py  jax.py  numba.py  utils.py
netket_foundation/_src/operator/pauli_strings/: __init__.py  base.py  jax.py  operators.py
netket_foundation/_src/stats/: __init__.py  replica_stats.py
netket_foundation/_src/vqs/: fidelity_susceptibility.py  serialize.py  state.py
tests/: helpers.py  test_driver.py  test_hilbert.py  test_model.py  test_operator.py  test_stats.py  test_vqs.py
