[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netket-foundation"
version = "0.1.0"
description = "Foundation models and utilities for NetKet"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "netket @ git+https://github.com/netket/netket.git",
    "nqxpack @ git+https://github.com/NeuralQXLab/nqxpack.git",
    "matplotlib"
]

[tool.hatch.build]
include = ["netket_foundation*"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# Lint everything except examples (which are only formatted, not linted)
exclude = ["examples"]
select = ["E", "F", "W", "UP"]
fixable = ["ALL"]
ignore = [
    "E501",   # line too long (black handles this)
    "E731",   # lambda assignment
    "E721",   # type comparison
    "E741",   # ambiguous variable names (common in physics: l, O, I)
    "UP007",  # Optional[X] -> X | None  (too pervasive, style choice)
    "UP035",  # deprecated typing imports
    "UP038",  # isinstance union syntax
    "UP045",  # Optional[X] -> X | None  (same as UP007 for newer ruff)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"tests/*" = ["E402"]

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]
