[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netket-foundation"
version = "0.1.0"
description = "Foundation models and utilities for NetKet"
authors = [
    { name = "Filippo Vicentini", email = "filippo.vicentini@polytechnique.edu" },
    { name = "The NeuralQX Lab" },
]
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
keywords = ["machine learning", "quantum physics", "neural quantum states", "netket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "netket>=3.22",
    "nqxpack>=0.1.13",
    "numpy",
    "jax",
    "flax",
    "einops",
    "numba",
]

[project.optional-dependencies]
openfermion = ["openfermion"]

[project.urls]
Homepage = "https://github.com/NeuralQXLab/netket_foundation"
Documentation = "https://neuralqxlab.github.io/netket_foundation"
Repository = "https://github.com/NeuralQXLab/netket_foundation"
Issues = "https://github.com/NeuralQXLab/netket_foundation/issues"

[tool.hatch.build]
include = ["netket_foundation*"]

[dependency-groups]
dev = [
    "ipython>=9",
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
    "ipywidgets>=7.0",
    "ipykernel>=7.2.0",
    "nbconvert>=7.17.1",
    "matplotlib>=3.8",
]
docs = [
    "matplotlib>=3.8",
    "sphinx-autobuild>=2024.0",
    "sphinx-book-theme>=1.2.0",
    "sphinx-design>=0.7.0",
    "myst-nb>=1.0.0",
    "neuralqxlab-sphinx-theme",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
# Lint everything except examples (which are only formatted, not linted)
extend-exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "W", "UP"]
fixable = ["ALL"]
ignore = [
    "E501",   # line too long (black handles this)
    "E731",   # lambda assignment
    "E721",   # type comparison
    "E741",   # ambiguous variable names (common in physics: l, O, I)
    "UP007",  # Optional[X] -> X | None  (too pervasive, style choice)
    "UP035",  # deprecated typing imports
    "UP045",  # Optional[X] -> X | None  (same as UP007 for newer ruff)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"tests/*" = ["E402"]

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]

# To easily bump versions from github
[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.uv.sources]
neuralqxlab-sphinx-theme = { git = "https://github.com/NeuralQXLab/neuralqxlab-sphinx-theme" }
